add navbar, footer and technology component

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Franco Javier Nieva - Portafolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="bg-[#000]" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
