add testimonials section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Franco Javier Nieva">
     <meta name="description" content="Descubre mis proyectos personales y en los que he colaborado, las tecnologías que utilizo como Desarrollador Web y mucho más.">
-    <link rel="shortcut icon" href="./src/assets/foto-perfil.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/assets/perfil-byn.jpg" type="image/x-icon">
     <title>Franco Javier Nieva - Portafolio</title>
   </head>
   <body>
